Github pages funcionou
testei o github pages e funcionou.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Testando o github pages</title>
 </head>
 <body>
-    <p>Neste repositório o github pages está sendo testado</p>
+    <p>Eu estou testando o github pages, e pelo visto funcionou.</p>
 </body>
 </html>
